# electricity-usage-tracker

./: .env.example  .gitignore  AGENTS.md  README.md
backend/: pyproject.toml
backend/app/domain/: billing.py  forecast.py
backend/tests/: test_billing.py  test_forecast.py
docs/: excel-mapping.md  mvp-plan.md
